--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@next/third-parties": "^14.1.3",
+    "@vercel/speed-insights": "^1.0.11",
     "axios": "^1.6.8",
     "graphql": "^16.8.1",
     "graphql-request": "^7.0.1",
